# Uzbek-Parallel-Corpus

./: .gitignore  README.md  pyproject.toml
submission/: dataset.csv  new_evaluate.py  predictions_model_1.csv  predictions_model_1_old.csv  predictions_model_2.csv  prepare_data.py  report.txt  run_evaluation.py  translate_model_1.py  translate_model_2.py
submission/experiments/: uz-gemma-batch-12b.ipynb
