[project]
name = "south-uzb-mt"
version = "1.0"
description = "South Uzbek to EN Machine Translation | Test task for SIC"
readme = "README.md"
requires-python = ">=3.10.18"
dependencies = [
    "bert-score>=0.3.13",
    "datasets>=4.4.2",
    "deep-translator>=1.11.4",
    "evaluate>=0.4.6",
    "mlflow>=3.8.1",
    "nltk>=3.9.2",
    "pandas>=2.3.3",
    "polars>=1.37.1",
    "sacrebleu>=2.6.0",
    "scikit-learn>=1.7.2",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.5",
]
